--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,130 @@
 alembic==1.13.2
 aniso8601==9.0.1
-bcrypt==4.2.0
+annotated-types==0.7.0
+anyio==4.4.0
+apturl==0.5.2
+bcrypt==3.2.0
 blinker==1.8.2
+Brlapi==0.8.3
+ccsm==0.9.14.1
+certifi==2020.6.20
+chardet==4.0.0
 click==8.1.7
+colorama==0.4.4
+command-not-found==0.3
+compizconfig-python==0.9.14.1
+cryptography==3.4.8
+cupshelpers==1.0
+dbus-python==1.2.18
+defer==1.0.6
+distlib==0.3.8
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
+dnspython==2.6.1
+duplicity==0.8.21
+email_validator==2.2.0
+exceptiongroup==1.2.1
+fastapi==0.111.1
+fastapi-cli==0.0.4
+fasteners==0.14.1
+filelock==3.14.0
 Flask==3.0.3
 Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.1
-Flask-JWT-Extended==4.6.0
 Flask-Migrate==4.0.7
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
-greenlet==3.0.3
-gunicorn==23.0.0
+future==0.18.2
+greenlet==1.1.2
+h11==0.14.0
+httpcore==1.0.5
+httplib2==0.20.2
+httptools==0.6.1
+httpx==0.27.0
+idna==3.3
+importlib-metadata==4.6.4
+iniconfig==2.0.0
 itsdangerous==2.2.0
+jeepney==0.7.1
 Jinja2==3.1.4
-Mako==1.3.5
+keyring==23.5.0
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lockfile==0.12.2
+louis==3.20.0
+macaroonbakery==1.3.1
+Mako==1.1.3
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-packaging==24.1
-psycopg2==2.9.9
+mdurl==0.1.2
+monotonic==1.6
+more-itertools==8.10.0
+netifaces==0.11.0
+oauthlib==3.2.0
+olefile==0.46
+packaging==24.0
+paramiko==2.9.3
+pbr==5.8.0
+pexpect==4.8.0
+Pillow==9.0.1
+pipenv==2023.12.1
+platformdirs==4.2.2
+pluggy==1.5.0
+protobuf==3.12.4
 psycopg2-binary==2.9.9
-PyJWT==2.8.0
-python-http-client==3.3.7
+ptyprocess==0.7.0
+pycairo==1.20.1
+pycups==2.0.1
+pydantic==2.8.2
+pydantic_core==2.20.1
+Pygments==2.18.0
+PyGObject==3.42.1
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyparsing==2.4.7
+pyRFC3339==1.1
+pysqlite3==0.5.3
+pytest==8.2.1
+python-apt==2.4.0+ubuntu3
+python-dateutil==2.8.1
+python-debian==0.1.43+ubuntu1.1
+python-dotenv==1.0.1
+python-multipart==0.0.9
 pytz==2024.1
-sendgrid==6.11.0
+pyxdg==0.27
+PyYAML==5.4.1
+reportlab==3.6.8
+requests==2.25.1
+rich==13.7.1
+SecretStorage==3.3.1
+shellingham==1.5.4
 six==1.16.0
+sniffio==1.3.1
 SQLAlchemy==2.0.29
 sqlalchemy-serializer==1.4.22
-starkbank-ecdsa==2.2.0
+starlette==0.37.2
+systemd-python==234
+testresources==2.0.1
+tomli==2.0.1
+typer==0.12.3
 typing_extensions==4.12.2
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+unittest2==1.1.0
+urllib3==1.26.5
+usb-creator==0.3.7
+uvicorn==0.30.1
+uvloop==0.19.0
+virtualenv==20.26.2
+wadllib==1.3.6
+watchfiles==0.22.0
+websockets==12.0
 Werkzeug==3.0.3
+xdg==5
+xkit==0.0.0
+zipp==1.0.0
